Fixes feature alignment bug on Android browsers.

--- a/reason_4.0/www/local/luther_2014/stylesheets/scss/sites/home.scss
+++ b/reason_4.0/www/local/luther_2014/stylesheets/scss/sites/home.scss
@@ -60,6 +60,8 @@
 						max-width: 10000px !important;
 						height: 224px !important;
 						position: absolute;
+						left: 50%;
+						top: 0;
 						margin-left: -323px;
 					}
 				}
